core/codegen/tests/ui-fail-stable/from_form_field.stderr
error: tuple structs are not supported
 --> $DIR/from_form_field.rs:4:1
  |
4 | struct Foo1;
  | ^^^^^^

error: [note] error occurred while deriving `FromFormField`
 --> $DIR/from_form_field.rs:3:10
  |
3 | #[derive(FromFormField)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs are not supported
 --> $DIR/from_form_field.rs:7:1
  |
7 | struct Foo2(usize);
  | ^^^^^^

error: [note] error occurred while deriving `FromFormField`
 --> $DIR/from_form_field.rs:6:10
  |
6 | #[derive(FromFormField)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: named structs are not supported
  --> $DIR/from_form_field.rs:10:1
   |
10 | struct Foo3 {
   | ^^^^^^

error: [note] error occurred while deriving `FromFormField`
 --> $DIR/from_form_field.rs:9:10
  |
9 | #[derive(FromFormField)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: variants cannot have fields
  --> $DIR/from_form_field.rs:16:6
   |
16 |     A(usize),
   |      ^^^^^^^

error: [note] error occurred while deriving `FromFormField`
  --> $DIR/from_form_field.rs:14:10
   |
14 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: enum must have at least one variant
  --> $DIR/from_form_field.rs:20:1
   |
20 | enum Foo5 { }
   | ^^^^

error: [note] error occurred while deriving `FromFormField`
  --> $DIR/from_form_field.rs:19:10
   |
19 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type generics are not supported
  --> $DIR/from_form_field.rs:23:11
   |
23 | enum Foo6<T> {
   |           ^

error: [note] error occurred while deriving `FromFormField`
  --> $DIR/from_form_field.rs:22:10
   |
22 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected string literal
  --> $DIR/from_form_field.rs:29:21
   |
29 |     #[field(value = 123)]
   |                     ^^^

error: [note] error occurred while deriving `FromFormField`
  --> $DIR/from_form_field.rs:27:10
   |
27 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected literal, found bare path "value"
  --> $DIR/from_form_field.rs:35:13
   |
35 |     #[field(value)]
   |             ^^^^^

error: [note] error occurred while deriving `FromFormField`
  --> $DIR/from_form_field.rs:33:10
   |
33 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: field has conflicting names
  --> $DIR/from_form_field.rs:41:5
   |
41 |     #[field(name = "foo")]
   |     ^

error: [note] this field name...
  --> $DIR/from_form_field.rs:41:20
   |
41 |     #[field(name = "foo")]
   |                    ^^^^^

error: [note] ...conflicts with this name
  --> $DIR/from_form_field.rs:42:28
   |
42 |     #[field(name = uncased("FOO"))]
   |                            ^^^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form_field.rs:39:10
   |
39 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: field name conflicts with previous name
  --> $DIR/from_form_field.rs:50:20
   |
50 |     #[field(name = "foo")]
   |                    ^^^^^

error: [note] previous field with conflicting name
  --> $DIR/from_form_field.rs:48:5
   |
48 |     #[field(name = "foo")]
   |     ^

error: [help] field name is part of this field
  --> $DIR/from_form_field.rs:50:5
   |
50 |     #[field(name = "foo")]
   |     ^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form_field.rs:46:10
   |
46 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: field name conflicts with previous name
  --> $DIR/from_form_field.rs:58:5
   |
58 |     hello_there: usize,
   |     ^^^^^^^^^^^

error: [note] previous field with conflicting name
  --> $DIR/from_form_field.rs:56:5
   |
56 |     #[field(name = uncased("HELLO_THERE"))]
   |     ^

error: [help] field name is part of this field
  --> $DIR/from_form_field.rs:58:5
   |
58 |     hello_there: usize,
   |     ^^^^^^^^^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form_field.rs:54:10
   |
54 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: field name conflicts with previous name
  --> $DIR/from_form_field.rs:65:5
   |
65 |     hello_there: usize,
   |     ^^^^^^^^^^^

error: [note] previous field with conflicting name
  --> $DIR/from_form_field.rs:63:5
   |
63 |     #[field(name = "hello_there")]
   |     ^

error: [help] field name is part of this field
  --> $DIR/from_form_field.rs:65:5
   |
65 |     hello_there: usize,
   |     ^^^^^^^^^^^

error: [note] error occurred while deriving `FromForm`
  --> $DIR/from_form_field.rs:61:10
   |
61 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
